--- a/Index.html
+++ b/Index.html
@@ -413,7 +413,7 @@ Web development is the building and maintenance of websites; it’s the work tha
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Quizexpert</h4>
+                                <h4 class="text-uppercase"><a href="https://quizexpert.vercel.app/">Quizexpert</a></h4>
                                 <span class="text-secondary">Project</span>
                             </div>
                         </div>
@@ -426,7 +426,7 @@ Web development is the building and maintenance of websites; it’s the work tha
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Puzzle</h4>
+                                <h4 class="text-uppercase"><a href="https://quizexpert.vercel.app/">Puzzle</a></h4>
                                 <span class="text-secondary">Quizexpert</span>
                             </div>
                         </div>
@@ -439,7 +439,7 @@ Web development is the building and maintenance of websites; it’s the work tha
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Answer</h4>
+                                <h4 class="text-uppercase"><a href="https://quizexpert.vercel.app/">Answer</a></h4>
                                 <span class="text-secondary">Quizexpert</span>
                             </div>
                         </div>
